--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
   <header class="grid gutter-1-2">
-    <img class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-4 logo" src="images/logo.svg" alt="">
+    <img class="unit xs-2-3 s-1-2 m-1-3 l-1-3 push-1-4 logo pad-t-1-8" src="images/logo.svg" alt="">
 
-    <div class="unit xs-1 s-1 m-2-3 l-2-3 push" id="input-container">
+    <div class="unit xs-1 s-1 m-2-3 l-2-3 push search" id="input-container">
       <img class="i-1" src="images/search.svg" alt="">
       <label for="search"></label>
       <input id="search" type="Search" name="search-bar" value="" required>
@@ -23,7 +23,7 @@
   </header>
 
   <div class="grid playgrounds gutter-1-2 pad-b-1-2">
-    <div class="unit xs-1 s-1 m-1-3 l-1-3">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 play">
       <h1 class="pad-t-1-2 push-1-2 giga">Nearest playgrounds</h1>
 
       <div class="grid box island-1-2 push-1-2">
@@ -45,300 +45,300 @@
       </div>
     </div>
 
-      <div class="unit xs-1 s-1 m-2-3 l-2-3 list-group table-wrapper scrollable">
-        <table>
-          <caption class="not-italic bold giga">Playgrounds in the city</caption>
-          <thead>
-            <tr>
-              <th class="park-id" scope="col">Park ID</th>
-              <th class="park-type" scope="col">Park type</th>
-              <th class="age-group" scope="col">Age group</th>
-              <th class="swings" scope="col">Swings</th>
-              <th class="slides" scope="col">Slides</th>
-              <th class="seesaws" scope="col">Seesaws</th>
-              <th class="sandboxes" scope="col">Sandboxes</th>
-              <th class="playhouses" scope="col">Playhouses</th>
-            </tr>
-          </thead>
+    <div class="unit xs-1 s-1 m-2-3 l-2-3 list-group table-wrapper scrollable">
+      <table>
+        <caption class="not-italic bold giga">Playgrounds in the city</caption>
+        <thead>
+          <tr>
+            <th class="park-id" scope="col">Park ID</th>
+            <th class="park-type" scope="col">Park type</th>
+            <th class="age-group" scope="col">Age group</th>
+            <th class="swings" scope="col">Swings</th>
+            <th class="slides" scope="col">Slides</th>
+            <th class="seesaws" scope="col">Seesaws</th>
+            <th class="sandboxes" scope="col">Sandboxes</th>
+            <th class="playhouses" scope="col">Playhouses</th>
+          </tr>
+        </thead>
 
-          <tbody>
-            <tr>
-              <th scope="row">545</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+        <tbody>
+          <tr>
+            <th scope="row">545</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">81</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">81</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">140</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">140</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">376</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">376</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">373</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>Yes</td>
-            </tr>
+          <tr>
+            <th scope="row">373</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>Yes</td>
+          </tr>
 
-            <tr>
-              <th scope="row">310</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">310</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">1133</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">1133</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">1032</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">1032</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">1647</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">1647</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">1700</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">1700</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">1213</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">1213</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">2452</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">2452</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">1010</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">1010</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">960</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">960</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">555</th>
-              <td>Play structure</td>
-              <td>senior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">555</th>
+            <td>Play structure</td>
+            <td>senior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">403</th>
-              <td>Play structure</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">403</th>
+            <td>Play structure</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">89</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">89</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">786</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">786</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">108</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">108</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">686</th>
-              <td>Play structure</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">686</th>
+            <td>Play structure</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">1083</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">1083</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">806</th>
-              <td>Play structure</td>
-              <td>senior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">806</th>
+            <td>Play structure</td>
+            <td>senior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">1032</th>
-              <td>Play area</td>
-              <td>Toddler</td>
-              <td>Yes</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">1032</th>
+            <td>Play area</td>
+            <td>Toddler</td>
+            <td>Yes</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">65</th>
-              <td>Play structure</td>
-              <td>Toddler</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
+          <tr>
+            <th scope="row">65</th>
+            <td>Play structure</td>
+            <td>Toddler</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
 
-            <tr>
-              <th scope="row">609</th>
-              <td>Play area</td>
-              <td>Junior</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-              <td>No</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+          <tr>
+            <th scope="row">609</th>
+            <td>Play area</td>
+            <td>Junior</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+            <td>No</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </body>
 </html>
